# gforce

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: openings.epd
data/selfplayGames/: selfplay_2b0c4361_openings_21kn.cfg  selfplay_7fe504be_openings_21kn.cfg
render/: config.yml  keep_alive.py  start.sh
src/: CMakeLists.txt  makefile
src/engine/: CMakeLists.txt  Evaluate.cpp  EvaluateUtils.hpp  Game.cpp  Move.cpp  MoveOrderer.cpp  Position.cpp  Position.hpp  PositionUtils.cpp  Search.cpp  TimeManager.cpp  UCI.cpp  UCI.hpp
src/tools/: AnalyzeGames.cpp  CMakeLists.txt  Common.hpp  CudaNetworkTrainer.cpp  EndgamePositionsGenerator.cpp  EndgameValidation.cpp  FindMagics.cpp  GameCollection.cpp  GameCollection.hpp  GameTests.cpp  Main.cpp  NetworkTest.cpp  NetworkTrainer.cpp  PackedPositionTests.cpp  PgnParser.cpp  PgnParser.hpp  PgnParserTests.cpp  PgnToTrainingData.cpp  PlainTextToTrainingData.cpp  PrepareTrainingData.cpp  SelfPlay.cpp  Stream.hpp  Tests.cpp  ThreadPool.cpp  TrainerCommon.cpp  TrainerCommon.hpp  TrainerUtils.hpp
src/tools/cudaTrainer/: CudaCommon.hpp  CudaNetwork.hpp  README_CUDA.md
src/tools/net/: Common.hpp  ConcatenationNode.hpp  Network.cpp
